# mpc5748G_projects

./: .gitmodules  README.md  mkenv.bat
.metadata/: version.ini
.metadata/.plugins/com.pemicro.debug.gdbjtag.ppc/: config.ini
.metadata/.plugins/org.eclipse.cdt.core/: adc_Z2_3.1522224903509.pdom  adc_Z2_3.language.settings.xml  adc_Z4_1.1522224903540.pdom  adc_Z4_1.language.settings.xml  adc_Z4_2.1522224903556.pdom  adc_Z4_2.language.settings.xml  linflexd_uart_mpc5748g.language.settings.xml
.metadata/.plugins/org.eclipse.core.resources/: 1.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/adc_Z2_3/: .location
.metadata/.plugins/org.eclipse.core.resources/.projects/adc_Z2_3/.indexes/: history.index  properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/adc_Z2_3/.indexes/33/: history.index
.metadata/.plugins/org.eclipse.core.resources/.projects/adc_Z2_3/.indexes/33/e4/: history.index
.metadata/.plugins/org.eclipse.core.resources/.projects/adc_Z4_1/: .location  .markers  .markers.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/adc_Z4_1/.indexes/: history.index  properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/adc_Z4_1/.indexes/33/: history.index
.metadata/.plugins/org.eclipse.core.resources/.projects/adc_Z4_1/.indexes/33/e4/: history.index
.metadata/.plugins/org.eclipse.core.resources/.projects/adc_Z4_1/.indexes/e4/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/adc_Z4_2/: .location
.metadata/.plugins/org.eclipse.core.resources/.projects/adc_Z4_2/.indexes/: history.index  properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/adc_Z4_2/.indexes/33/: history.index  properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/adc_Z4_2/.indexes/33/e4/: history.index
.metadata/.plugins/org.eclipse.core.resources/.projects/adc_Z4_2/.indexes/e4/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/adc_Z4_2/org.eclipse.egit.core/: GitProjectData.properties
.metadata/.plugins/org.eclipse.core.resources/.projects/freertos_mpc5748g/: .location  .markers  .markers.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/freertos_mpc5748g/.indexes/: history.index  properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/freertos_mpc5748g/.indexes/66/: history.index
.metadata/.plugins/org.eclipse.core.resources/.projects/freertos_mpc5748g/.indexes/dd/: history.index  properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/freertos_mpc5748g/org.eclipse.egit.core/: GitProjectData.properties
.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2018/3/13/: refactorings.history  refactorings.index
.metadata/.plugins/org.eclipse.search/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
.metadata/.plugins/org.eclipse.wst.sse.core/: task-tags.properties
adc/adc_Z2_3/: .cproject  .project  CMakeLists.txt
adc/adc_Z2_3/Project_Settings/Debugger/: adc_Z2_3_Debug.launch
adc/adc_Z4_1/: .cproject  .project
adc/adc_Z4_1/Project_Settings/Debugger/: adc_Z4_1_Debug.launch
adc/adc_Z4_2/: .cproject  .project
adc/adc_Z4_2/Project_Settings/Debugger/: adc_Z4_2_Debug.launch
cmake_test/: CMakeLists.txt
cmake_test/cmake/: e200.cmake
freertos_mpc5748g/: .cproject  .freertos_mpc5748g.g_c  .freertos_mpc5748g.g_x  .gitignore  .project  ProcessorExpert.pe  description.txt
freertos_mpc5748g/Debug_Configurations/: freertos_mpc5748g_Debug_FLASH PEmicro.launch  freertos_mpc5748g_Debug_RAM PEmicro.launch
freertos_mpc5748g/Documentation/: freertos_mpc5748g.txt  freertos_mpc5748g_Settings.previous.xml  freertos_mpc5748g_Settings.xml
freertos_mpc5748g/Doxygen/: freertos_mpc5748g.dox
freertos_mpc5748g/Generated_Code/: Cpu.c  Cpu.h  FreeRTOSConfig.h  clockMan1.c  clockMan1.h  dmaController1.c  dmaController1.h  osif1.c  osif1.h  uart_pal1.c  uart_pal1.h  uart_pal_cfg.h
freertos_mpc5748g/Sources/: main.c
(+6 files in other folders)
